# rua

./: Cargo.toml  GRAMMER.md  LICENSE  LUA_MEMO.md  NOM_MEMO.md  README.ja.md  README.md
.claude/agents/: lua-capi.md  lua-cli.md  lua-conformance.md  lua-frontend.md  lua-runtime.md  lua-stdlib.md  lua-vm.md
.github/workflows/: ci.yml
crates/rua-capi/: Cargo.toml  build.rs
crates/rua-capi/include/: lauxlib.h  lua.h  lualib.h
crates/rua-capi/src/: aux.rs  lib.rs  tests.rs
crates/rua-cli/: Cargo.toml
crates/rua-cli/src/: bytecode.rs  cli.rs  disasm.rs  lib.rs  luac.rs  main.rs  repl.rs  run.rs
crates/rua-cli/tests/: capi_abi.rs  cli_smoke.rs  fuzz_smoke.rs  golden.rs  luac_smoke.rs  official_suite.rs
crates/rua-core/: Cargo.toml
crates/rua-core/examples/: 01_basic_eval.rs  02_load_file.rs  03_rust_functions.rs
crates/rua-core/src/: error.rs  lib.rs
crates/rua-core/src/api/: convert.rs  mod.rs  value.rs
crates/rua-core/src/compiler/: ast.rs  codegen.rs  lexer.rs  mod.rs  parser.rs
crates/rua-core/src/gc/: alloc.rs  mod.rs
crates/rua-core/src/state/: call.rs  mod.rs
crates/rua-core/src/stdlib/: aux.rs  base.rs  coroutine_lib.rs  debug_lib.rs  io_lib.rs  math_lib.rs  mod.rs  os_lib.rs  package_lib.rs  pattern.rs  string_lib.rs  table_lib.rs
crates/rua-core/src/value/: closure.rs  convert.rs  mod.rs  string.rs  table.rs  thread.rs  userdata.rs
crates/rua-core/src/vm/: interp.rs  mod.rs  opcode.rs  proto.rs
crates/rua-core/tests/: frontend_e2e.rs  gc.rs  highlevel_api.rs  require.rs  stdlib.rs  vm.rs
docs/: ARCHITECTURE.md  CONFORMANCE.md  IMPLEMENTATION_STATUS.md  RUAJIT_SPIKE.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: compile_only.rs  compile_run.rs
src/: compiler.rs  lexer.rs  main.rs  object.rs  parser.rs  table.rs  value.rs  vm.rs
src/stdlib/: math.rs  mod.rs  string.rs
tests/bench/: README.md  run_bench.sh
tests/bench/scripts/: fib.lua  nbody.lua  string_build.lua  table_ops.lua
tests/capi/: smoke.c  smoke.expected
tests/lua/: 01_arithmetic.expected  01_arithmetic.lua  02_strings.expected  02_strings.lua  03_string_patterns.expected  03_string_patterns.lua  04_tables.expected  04_tables.lua  05_control_flow.expected  05_control_flow.lua  06_functions.expected  06_functions.lua  07_metatables.expected  07_metatables.lua  08_errors.expected  08_errors.lua  09_iterators.expected  09_iterators.lua  10_conversions.expected  10_conversions.lua  11_math.expected  11_math.lua  12_recursive_data.expected  12_recursive_data.lua  13_io_os.expected  13_io_os.lua  14_uncaught_error.expected  14_uncaught_error.lua  15_big_table.expected  15_big_table.lua  16_coroutines.expected  16_coroutines.lua  regenerate_expected.sh
tests/lua-suite/: .gitignore  README.md  fetch.sh
tests/scripts/: for_in.lua  for_range.lua
