[package]
name = "rua"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8.0.0"
thiserror = "2.0.11"
[package]
name = "rust-lua"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Lua interpreter implemented in Rust"

[dependencies]
# 必要に応じて依存関係を追加

[dev-dependencies]
# テスト用の依存関係
