[package]
name = "rua-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone `rua` interpreter CLI (rua run <file>)."

[[bin]]
name = "rua"
path = "src/main.rs"

[dependencies]
rua-core.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reedline = "0.46"
nu-ansi-term = "0.50"
