[package]
name = "rua-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone `rua` interpreter CLI (rua <file>) and `ruac` compiler."

[lib]
name = "rua_cli"
path = "src/lib.rs"

[[bin]]
name = "rua"
path = "src/main.rs"

[[bin]]
name = "ruac"
path = "src/bin/ruac.rs"

[dependencies]
rua-core.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reedline = "0.46"
nu-ansi-term = "0.50"
